--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/300.database-object-planning-of-mysql-mode/300.create-table-of-mysql-mode-in-develop.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/300.database-object-planning-of-mysql-mode/300.create-table-of-mysql-mode-in-develop.md
@@ -235,7 +235,7 @@ Query OK, 1 row affected
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
 
-您可以根据业务需要，修改这三个系统变量的值，修改系统变量的操作请参见 [系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/200.system-variable/100.overview-of-system-variables.md)。
+您可以根据业务需要，修改这三个系统变量的值，修改系统变量的操作请参见 [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
 
 以下是定义自增列需要遵循的要求：
 
