--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1200.view-cluster-parameters.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1200.view-cluster-parameters.md
@@ -12,7 +12,7 @@
 
   与 `SHOW` 语句不同，通过 `GV$OB_PARAMETERS` 视图可以查看集群中的所有配置项（含隐藏配置项，即 `_xx_xx` 格式的配置项）及其所有属性描述。
 
-有关配置项的更多说明，请参见 [系统配置项概述](../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/100.system-configuration-items-overview.md)。
+有关配置项的更多说明，请参见 [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
 
 ## 通过 SHOW 语句查看集群配置项
 
