--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1300.modify-cluster-parameters.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1300.modify-cluster-parameters.md
@@ -7,7 +7,7 @@
    <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群级配置项，用户租户只能查看集群级配置项，无法设置集群级配置项。</p>
  </main>
 
-有关配置项的更多说明，请参见 [系统配置项概述](../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/100.system-configuration-items-overview.md)。
+有关配置项的更多说明，请参见 [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
 
 ## 操作步骤
 
