--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/400.show-session-variables.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/400.show-session-variables.md
@@ -129,4 +129,4 @@ obclient> SHOW PROXYSESSION VARIABLES all 2147549231 like "%id%";
 
 ## 相关信息
 
-有关系统变量的详细介绍请参见 [系统变量概述](../../800.configuration-items-and-system-variables/200.system-variable/100.overview-of-system-variables.md) 。
+有关系统变量的详细介绍请参见 [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
