--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/700.modify-system-variables-of-tenant.md
@@ -129,5 +129,5 @@ SET GLOBAL foreign_key_checks = 0;
 
 关于系统变量的更多信息，参见：
 
-* [系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/200.system-variable/100.overview-of-system-variables.md)
+* [配置项和系统变量概述](../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)
 * [查看系统变量](../600.common-tenant-operations/600.view-system-variables-of-tenant.md)
