--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/300.define-an-auto-increment-column-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/300.define-an-auto-increment-column-of-mysql-mode.md
@@ -12,7 +12,7 @@
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
 
-系统变量的设置方法及说明请参见 [系统变量概述](../../../800.configuration-items-and-system-variables/200.system-variable/100.overview-of-system-variables.md)。
+系统变量的设置方法及说明请参见 [配置项和系统变量概述](../../../../700.reference/800.configuration-items-and-system-variables/000.configuration-items-and-system-variables-overview.md)。
 
 ## 创建自增列
 
