--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/24100.dba_ob_tenant_event_history-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/24100.dba_ob_tenant_event_history-of-mysql-mode.md
@@ -13,21 +13,21 @@
 
 | 字段        | 类型         | 是否为 NULL | 描述                                       |
 |------------|--------------|-------------|-------------------------------------------|
-| TIMESTAMP  | timestamp(6) | NO          | 执行时间，单位纳秒 |
+| TIMESTAMP  | timestamp(6) | NO          | 执行时间，单位微秒 |
 | MODULE     | varchar(256) | NO          | 模块名称    |
 | EVENT      | varchar(256) | NO          | 事件名称   |
-| NAME1      | varchar(256) | YES         | 第一个事件属性名称   |
-| VALUE1     | longtext     | YES         | 第一个事件属性值   |
-| NAME2      | varchar(256) | YES         | 第二个事件属性名称  |
-| VALUE2     | longtext     | YES         | 第二个事件属性值  |
-| NAME3      | varchar(256) | YES         | 第三个事件属性名称 |
-| VALUE3     | longtext     | YES         | 第三个事件属性值  |
-| NAME4      | varchar(256) | YES         | 第四个事件属性名称   |
-| VALUE4     | longtext     | YES         | 第四个事件属性值   |
-| NAME5      | varchar(256) | YES         | 第五个事件属性名称  |
-| VALUE5     | longtext     | YES         | 第五个事件属性值   |
-| NAME6      | varchar(256) | YES         | 第六个事件属性名称   |
-| VALUE6     | longtext     | YES         | 第六个事件属性值    |
+| NAME1      | varchar(256) | YES         | 第一个属性名称   |
+| VALUE1     | longtext     | YES         | 第一个属性值   |
+| NAME2      | varchar(256) | YES         | 第二个属性名称  |
+| VALUE2     | longtext     | YES         | 第二个属性值  |
+| NAME3      | varchar(256) | YES         | 第三个属性名称 |
+| VALUE3     | longtext     | YES         | 第三个属性值  |
+| NAME4      | varchar(256) | YES         | 第四个属性名称   |
+| VALUE4     | longtext     | YES         | 第四个属性值   |
+| NAME5      | varchar(256) | YES         | 第五个属性名称  |
+| VALUE5     | longtext     | YES         | 第五个属性值   |
+| NAME6      | varchar(256) | YES         | 第六个属性名称   |
+| VALUE6     | longtext     | YES         | 第六个属性值    |
 | EXTRA_INFO | longtext     | YES         | 额外的信息    |
 | SVR_IP     | varchar(46)  | YES         | 执行动作所在的 OBServer 节点的 IP   |
 | SVR_PORT   | bigint(20)   | YES         | 执行动作所在的 OBServer 节点的端口号     |
