--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/30300.dba_ob_tenant_event_history-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/30300.dba_ob_tenant_event_history-of-oracle-mode.md
@@ -16,18 +16,18 @@
 | TIMESTAMP  | TIMESTAMP(6) WITH LOCAL TIME ZONE | NO          | 执行时间，单位微秒 |
 | MODULE     | VARCHAR2(256)| NO          | 模块名称    |
 | EVENT      | VARCHAR2(256)| NO          | 事件名称   |
-| NAME1      | VARCHAR2(256)| YES         | 第一个事件属性名称   |
-| VALUE1     | CLOB         | YES         | 第一个事件属性值   |
-| NAME2      | VARCHAR2(256)| YES         | 第二个事件属性名称  |
-| VALUE2     | CLOB         | YES         | 第二个事件属性值  |
-| NAME3      | VARCHAR2(256)| YES         | 第三个事件属性名称 |
-| VALUE3     | CLOB         | YES         | 第三个事件属性值  |
-| NAME4      | VARCHAR2(256)| YES         | 第四个事件属性名称   |
-| VALUE4     | CLOB         | YES         | 第四个事件属性值   |
-| NAME5      | VARCHAR2(256)| YES         | 第五个事件属性名称  |
-| VALUE5     | CLOB         | YES         | 第五个事件属性值   |
-| NAME6      | VARCHAR2(256)| YES         | 第六个事件属性名称   |
-| VALUE6     | CLOB         | YES         | 第六个事件属性值    |
+| NAME1      | VARCHAR2(256)| YES         | 第一个属性名称   |
+| VALUE1     | CLOB         | YES         | 第一个属性值   |
+| NAME2      | VARCHAR2(256)| YES         | 第二个属性名称  |
+| VALUE2     | CLOB         | YES         | 第二个属性值  |
+| NAME3      | VARCHAR2(256)| YES         | 第三个属性名称 |
+| VALUE3     | CLOB         | YES         | 第三个属性值  |
+| NAME4      | VARCHAR2(256)| YES         | 第四个属性名称   |
+| VALUE4     | CLOB         | YES         | 第四个属性值   |
+| NAME5      | VARCHAR2(256)| YES         | 第五个属性名称  |
+| VALUE5     | CLOB         | YES         | 第五个属性值   |
+| NAME6      | VARCHAR2(256)| YES         | 第六个属性名称   |
+| VALUE6     | CLOB         | YES         | 第六个属性值    |
 | EXTRA_INFO | CLOB         | YES         | 额外的信息    |
 | SVR_IP     | VARCHAR2(46) | YES         | 执行动作所在的 OBServer 节点的 IP   |
 | SVR_PORT   | NUMBER(38)   | YES         | 执行动作所在的 OBServer 节点的端口号     |
