--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/16000.plan_cache_high_watermark.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/16000.plan_cache_high_watermark.md
@@ -2,11 +2,10 @@
 
 plan_cache_high_watermark 用于设置执行计划缓存占用内存的阈值，如果超过该阈值时将触发自动淘汰。配置时需说明单位，默认单位为 MB。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>在当前版本中，该配置项已不再使用。</p>
-  </main>
-
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>从 V4.2.0 版本开始弃用。</p>
+</main>
 
 |      **属性**      | **描述** |
 |------------------|--------|
