--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
@@ -2,6 +2,11 @@
 
 global_write_halt_residual_memory 用于设置触发暂停普通租户写入（sys 租户不受影响）的全局剩余内存阈值。即当全局剩余内存小于这个百分比时，暂停普通租户写入（sys 租户不受影响）。
 
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>从 V4.2.0 版本开始弃用。</p>
+</main>
+
 |      **属性**      |  **描述**   |
 |------------------|-----------|
 | 参数类型             | 整型        |
