--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/20800.system_trace_level.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/20800.system_trace_level.md
@@ -1,13 +1,11 @@
-system_trace_level 
-=======================================
+# system_trace_level
 
 system_trace_level 用于设置系统追踪日志的日志打印级别。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>在当前版本中，该配置项已不再使用。</p>
-  </main>
-
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>从 V4.2.0 版本开始弃用。</p>
+</main>
 
 |      **属性**      |                                                                               **描述**                                                                                |
 |------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -15,5 +13,3 @@ system_trace_level 用于设置系统追踪日志的日志打印级别。
 | 默认值              | 1                                                                                |
 | 取值范围             | <li> 0：表示 none   <li> 1：表示 standard   <li> 2：表示 debug    |
 | 是否重启 OBServer 节点生效 | 否                                                                                |
-
-
