--- a/zh-CN/700.reference/1500.command-line-tools/800.ob-admin/300.clog/300.clog-tool.md
+++ b/zh-CN/700.reference/1500.command-line-tools/800.ob-admin/300.clog/300.clog-tool.md
@@ -24,7 +24,7 @@ ob_admin log_tool dump_log <clog_file_name>
 
 代码使用说明：
 
-* 使用 `dump_log` 命令解析并打印指定的 clog 文件。解析多个文件时，文件名需要使用空格隔开。
+* 使用 `dump_log` 命令解析并打印指定的 clog 文件和归档文件。解析多个文件时，文件名需要使用空格隔开。
 
 * 其中 `clog_file_name` 为指定 clog 文件名。`clog_file_name` 可以包含文件路径。例如：
 
