--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -71,7 +71,7 @@ Install and deploy oblogproxy.
    # Specify parameters of the OceanBase cluster.
    canal.instance.oceanbase.rsList=10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
    canal.instance.oceanbase.username=root@mysql001#test4000
-   canal.instance.oceanbase.password=1****6
+   canal.instance.oceanbase.password=******
    canal.instance.oceanbase.startTimestamp=0
 
    # Specify parameters of oblogproxy.
@@ -129,7 +129,7 @@ Install and deploy oblogproxy.
            jdbc.driverClassName: com.mysql.jdbc.Driver
            jdbc.url: jdbc:mysql://10.10.10.1:3306/test_data?useUnicode=false
            jdbc.username: root
-           jdbc.password: 1****6
+           jdbc.password: ******
    ```
 
 4. Modify the database or table mapping on the adapter. The following command modifies the database mapping.
