--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
@@ -125,7 +125,7 @@ bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D <database> --from 
 这里以导出 MySQL 5.7 版本下 database 为 test 的所有对象的结构，并将其迁移到 4.0.0 版本的 OceanBase 集群中的 MySQL 租户为示例。
 
 ```shell
-bin/dbcat convert -H 11.161.xxx.xxx -P 3306 -uroot -pxxxxxx -D test --from mysql57 --to obmysql40 --all
+bin/dbcat convert -H 11.161.xxx.xxx -P 3306 -uroot -p****** -D test --from mysql57 --to obmysql40 --all
 ```
 
 特别说明：
