--- a/zh-CN/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/1.use-dbcat-to-migrate-data-from-oracle-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/1.use-dbcat-to-migrate-data-from-oracle-database-to-oceanbase-database.md
@@ -125,7 +125,7 @@ bin/dbcat convert -H<host> -P<port> -u<user> -p<******> -D<database> --service-n
 这里以导出 Oracle 12c 版本下 database 为 test 的所有对象的结构，并将其迁移到 4.0.0 版本的 OceanBase 集群中的 Oracle 租户为示例。
 
 ```shell
-bin/dbcat convert -H 100.88.xxx.xxx -P 1521 -uxxx -pxxxxxx -D test --service-name xxx --service-id xxx --from oracle12c --to oboracle40 --all
+bin/dbcat convert -H 100.88.xxx.xxx -P 1521 -uxxx -p****** -D test --service-name xxx --service-id xxx --from oracle12c --to oboracle40 --all
 ```
 
 特别说明：
