--- a/zh-CN/6.manage/10.troubleshooting/4.storage/2.memory.md
+++ b/zh-CN/6.manage/10.troubleshooting/4.storage/2.memory.md
@@ -16,7 +16,7 @@
 ```
 obclient> select * from GV$OB_MEMSTORE limit 1\G
 *************************** 1. row ***************************
-        SVR_IP: 6.0.132.81
+        SVR_IP: xx.xx.xx.xx
       SVR_PORT: 2882
      TENANT_ID: 1
    ACTIVE_SPAN: 0
