--- a/zh-CN/6.manage/10.troubleshooting/6.transaction/1.transaction-troubleshoot-overview.md
+++ b/zh-CN/6.manage/10.troubleshooting/6.transaction/1.transaction-troubleshoot-overview.md
@@ -20,10 +20,10 @@
 obclient> select * from gv$ob_transaction_participants\G
 *************************** 1. row ***************************
        TENANT_ID: 1002
-          SVR_IP: 11.166.80.69
+          SVR_IP: 11.xx.xx.xx
         SVR_PORT: 48274
       SESSION_ID: 3221506881
-  SCHEDULER_ADDR: "11.166.80.69:48270"
+  SCHEDULER_ADDR: "11.xx.xx.xx:48270"
          TX_TYPE: UNDECIDED
            TX_ID: 752
            LS_ID: 1002
@@ -37,10 +37,10 @@ FLUSHED_LOG_SIZE: 0
             ROLE: LEADER
 *************************** 2. row ***************************
        TENANT_ID: 1002
-          SVR_IP: 11.166.80.69
+          SVR_IP: 11.xx.xx.xx
         SVR_PORT: 48270
       SESSION_ID: 3221506881
-  SCHEDULER_ADDR: "11.166.80.69:48270"
+  SCHEDULER_ADDR: "11.xx.xx.xx:48270"
          TX_TYPE: UNDECIDED
            TX_ID: 752
            LS_ID: 1001
