--- a/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/2.performance-bottlenecks-within-odp.md
+++ b/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/2.performance-bottlenecks-within-odp.md
@@ -63,7 +63,7 @@ server_trace_id=Y81100B7C0535-0005E3460FBBE3CD-0-0, // 目标 OBServer 中执行
 route_type=ROUTE_TYPE_NONPARTITION_UNMERGE_LOCAL, // SQL 使用的路由策略
 user_name=root,         // 用户名
 tenant_name=sys,        // 租户名
-cluster_name=ob9988.zhixin.lm.100.88.147.179,  // 集群名
+cluster_name=ob9988.zhixin.lm.100.xx.xx.xx,  // 集群名
 logic_database_name=,  // 逻辑库名
 logic_tenant_name=,    // 逻辑租户名
 ob_proxy_protocol=0,   // 协议类型
