--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/500.delete-a-node.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/500.delete-a-node.md
@@ -22,12 +22,12 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
   Stop Zone 的相关操作请参见 [隔离节点](../300.common-cluster-operations/600.isolation-a-node.md)。
 
 * 也可以调整迁移任务的相关配置项来控制迁移速度。
-   
+
   迁移任务相关的配置项如下表所示。
 
   |           配置项名      |     描述            |
   |------------------------|-----------------------------------------------|
-  | balancer_idle_time     | 集群级配置项，可以控制每次发起迁移任务的时间间隔。默认值为 5m，表示 5 分钟，取值范围为 [10s, +∞)。 |
+  | balancer_idle_time     | 租户级配置项，可以控制每次发起迁移任务的时间间隔。默认值为 10s，表示 10 秒，取值范围为 [10s, +∞)。 |
   | sys_bkgd_net_percentage| 集群级配置项，可以控制迁移任务占用网卡带宽的百分比。默认值为 60，取值范围为 [0, 100]。            |
 
   查看并修改各配置项值的相关操作请参见 [修改集群配置项](../300.common-cluster-operations/1300.modify-cluster-parameters.md)。
