--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
@@ -10,7 +10,7 @@
 
 2. 选择合适的语句，设置配置项 `log_archive_concurrency`。
 
-   租户级配置项 `log_archive_concurrency` 用于配置日志归档总的工作线程数量。该配置项为动态生效，不需要重启 OBServer 节点。该配置项的默认值为 `1`，取值范围为 [1, 100]，当前仅支持 1 ~ 10 为有效值，即设置为小于或等于 10 的值时，以设置的值为准；当设置为大于 10 的值时，其有效取值为 10。由于线程数量增多会导致较多的内存占用，一般情况下，建议使用默认值。
+   租户级配置项 `log_archive_concurrency` 用于配置日志归档总的工作线程数量。该配置项为动态生效，不需要重启 OBServer 节点。该配置项的取值范围为 [0, 100]，默认值为 `0`，表示使用 OceanBase 数据库自适应的日志归档并行度。建议使用默认值。
 
    <main id="notice" type='notice'>
    <h4>注意</h4>
