--- a/zh-CN/700.reference/200.system-management/200.configuration-management/400.recommended-general-system-parameters.md
+++ b/zh-CN/700.reference/200.system-management/200.configuration-management/400.recommended-general-system-parameters.md
@@ -112,7 +112,7 @@
     obclient> ALTER SYSTEM datafile_disk_percentage=90;
     ```
 
-* enable_rebalance：用于设置是否开启自动负载均衡的功能。
+* enable_rebalance：用于设置是否开启自动负载均衡的功能。其中，系统租户下用于控制是否进行租户间均衡；普通租户下用于控制是否进行租户内均衡。
 
   * 默认值：True
 
@@ -190,7 +190,7 @@
 
   * 默认值：4
 
-  * 取值范围：\[1, 10\]
+  * 取值范围：\[1, 20\]
 
   * 示例：
 
