--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6800.balancer_idle_time.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6800.balancer_idle_time.md
@@ -7,13 +7,13 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>该配置项从 V4.2.0 版本开始调整为租户级配置项。</p>
+  <p>该配置项从 V4.2.0 版本开始调整为租户级配置项，默认值由 5m 调整为 10s。</p>
 </main>
 
 | **属性** | **描述** |
 | --- | --- |
 | 参数类型 | 时间类型 |
-| 默认值 | 5m，表示 5 分钟 |
+| 默认值 | 10s，表示 10 秒 |
 | 取值范围 | [10s, +∞) |
 | 是否重启 OBServer 节点生效 | 否 |
 
