--- a/zh-CN/700.reference/200.system-management/200.configuration-management/500.recommended-default-production-parameter-configuration.md
+++ b/zh-CN/700.reference/200.system-management/200.configuration-management/500.recommended-default-production-parameter-configuration.md
@@ -104,7 +104,7 @@
     obclient> ALTER SYSTEM SET max_syslog_file_count=500;
     ```
 
-* enable_rebalance：用于设置是否开启自动负载均衡的功能。
+* enable_rebalance：用于设置是否开启自动负载均衡的功能。其中，系统租户下用于控制是否进行租户间均衡；普通租户下用于控制是否进行租户内均衡。
 
   * 建议值：True
 
@@ -158,7 +158,7 @@
 
   * 建议值：4
 
-  * 取值范围：\[1, 10\]
+  * 取值范围：\[1, 20\]
 
   * 示例：
 
