--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/28600.standby_fetch_log_bandwidth_limit.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/28600.standby_fetch_log_bandwidth_limit.md
@@ -1,19 +1,19 @@
 # standby_fetch_log_bandwidth_limit
 
-`standby_fetch_log_bandwidth_limit` 备库集群中的所有 Server 从主库同步日志的流量总和占用的最大带宽，默认值为 0 代表不对流量进行限制。
+`standby_fetch_log_bandwidth_limit` 用于设置备租户所在集群中的所有 Server 从主租户同步日志的流量总和每秒可占用的最大带宽。
 
 <main id="notice" type='explain'>
-  <h4>说明</h4>
-  <ul>
-    <li>该配置项从 V4.2.0 版本开始引入。</li>
-    <li>设置该配置项时，必须带有单位（B/KB/MB/GB等），单位忽略大小写，默认都为 bytes。</li>
-  </ul>
+<h4>说明</h4>
+<ul>
+<li>该配置项从 V4.2.0 版本开始引入。</li>
+<li>设置该配置项时，必须带有单位（B/KB/MB/GB等），单位忽略大小写，默认都为 bytes。</li>
+</ul>
 </main>
 
 | **属性** | **描述** |
 | --- | --- |
 | 参数类型 | CAP |
-| 默认值 | 0 |
+| 默认值 | 0，表示不对流量进行限制|
 | 取值范围 | [0, 10000G] |
 | 是否重启 OBServer 节点生效 | 否 |
 **示例**
