--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/5500.cpu_quota_concurrency.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/5500.cpu_quota_concurrency.md
@@ -1,14 +1,17 @@
-# cpu_quota_concurrency 
-
+# cpu_quota_concurrency
 
 cpu_quota_concurrency 用于设置租户的每个 CPU 配额所允许的最大并发数。
 
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>该配置项从 V4.2.0 版本开始取值范围由 [1,10] 调整为 [1,20]。</p>
+</main>
 
 |      **属性**      |  **描述**   |
 |------------------|-----------|
 | 参数类型             | 双精度浮点数    |
 | 默认值              | 4         |
-| 取值范围             | \[1, 10\] |
+| 取值范围             | \[1, 20\] |
 | 是否重启 OBServer 节点生效 | 否         |
 
 
