--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/17400.rootservice_memory_limit.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/17400.rootservice_memory_limit.md
@@ -2,6 +2,10 @@
 
 rootservice_memory_limit 用于设置 Root Service 的最大内存容量限制。配置时需说明单位，默认单位为 MB。
 
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>该配置项从 V4.2.0 版本开始弃用。</p>
+</main>
 
 |      **属性**      |  **描述**   |
 |------------------|-----------|
