--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/2400.oceanbase-all-virtual-partition-migration-status.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/2400.oceanbase-all-virtual-partition-migration-status.md
@@ -31,7 +31,7 @@
 | finish_time | timestamp(6) | NO | 结束时间 |
 | action | varchar(64) | NO | 当前动作 |
 | replica_state | varchar(64) | NO | 目的端副本状态 |
-| rebuild_count | bigint(20) | NO | 任务重试的次数，受配置项 `sys_bkgd_migration_retry_num` 控制。`sys_bkgd_migration_retry_num` 用于设置副本迁移失败时最多重试次数，更多配置项信息请参见 [sys_bkgd_migration_retry_num](../1.system-configuration-items-1/3.cluster-level-configuration-items-1/207.sys_bkgd_migration_retry_num-1.md) |
+| rebuild_count | bigint(20) | NO | 任务重试的次数，受配置项 `sys_bkgd_migration_retry_num` 控制。`sys_bkgd_migration_retry_num` 用于设置副本迁移失败时最多重试次数，更多配置项信息请参见 [sys_bkgd_migration_retry_num](../300.system-configuration-items/18600.sys_bkgd_migration_retry_num.md)  |
 | total_macro_block | bigint(20) | NO | 宏块总数量 |
 | ready_macro_block | bigint(20) | NO | 已经完成的宏块数量 |
 | major_count | bigint(20) | NO | Major SSTable 的宏块个数 |
