--- a/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1000.oceanbase-all-server.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/150.common-internal-tables/1000.oceanbase-all-server.md
@@ -24,8 +24,8 @@
 | status | varchar(64) | NO | 状态 <ul><li> `ACTIVE`：Server 与 Root Service 心跳正常</li><li>`INACTIVE`：Server 与 Root Service 失去心跳联系 </li><li>`DELETING`：Server 正在删除中</li></ul> |
 | block_migrate_in_time | bigint(20) | NO | 负载均衡单机迁入的并发数是有限制的，到达上限时就不允许迁入了，这个是记录禁止迁入的时间点 |
 | build_version | varchar(256) | NO | 构建版本 |
-| stop_time | bigint(20) | NO | 停止的时间 |
+| stop_time | bigint(20) | NO | 标记这台机器开始停止服务的时间 |
 | start_service_time | bigint(20) | NO | 开始服务的时间 |
-| first_sessid | bigint(20) | NO | Sessid 起始值 |
+| first_sessid | bigint(20) | NO | 已废弃 |
 | with_partition | bigint(20) | NO | 判断 Server 上有没有副本 |
-| last_offline_time | bigint(20) | NO | 最近下线时间 |
+| last_offline_time | bigint(20) | NO | 已废弃 |
