--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/300.4000-4499-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/300.4000-4499-of-mysql-mode.md
@@ -2181,7 +2181,7 @@
   <p>该错误码从 V3.2.4 版本开始引入。</p>
 </main>
 
-## ERROR 4389 (HY000) : processing time is too long
+## ERROR 4389 (HY000) : Processing time is too long
 
 * OceanBase 错误码：4389
 
@@ -2266,7 +2266,7 @@
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
-## ERROR 4396 (HY000) : Worker thread pannic, thread may be terminated or hung
+## ERROR 4396 (HY000) : Worker thread panic, thread may be terminated or hung
 
 * OceanBase 错误码：4396
 * 错误原因：工作线程发生异常中止执行。
@@ -2275,4 +2275,28 @@
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
+## ERROR 4399 (HY000) : Unit status is not expected
+
+* OceanBase 错误码：4399
+* 错误原因： 执行旁路导入时发生了租户迁移。  
+* 解决方法： 重试执行失败的旁路导入 SQL 语句 。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4400 (HY000) : Autoinc cache's autoinc version is not equal to request's autoinc version
+
+* OceanBase 错误码：4400
+* 错误原因：在执行操作时，发现自增列值缓存的版本与请求的版本不一致。  
+* 解决方式：
+   1. 检查自增列值版本：检查自增列值版本是否正确，确保自增列值版本与请求的自增列值版本一致。
+   2. 清空自增列值缓存：尝试清空自增列值缓存，以便重新生成自增列值。  
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
