--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/400.4500-4999-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/400.4500-4999-of-mysql-mode.md
@@ -1120,7 +1120,7 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
-## ERROR 4755(HY000) :rootservice backgroud thread may be hung
+## ERROR 4755(HY000) :rootservice background thread may be hung
 
 * OceanBase 错误码：4755
 * 错误原因：Root Service 后台线程可能被挂起。
@@ -1180,6 +1180,61 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * OceanBase 错误码：4760
 * 错误原因：日志流正在从本机器上下线，不能正确读取 。
 * 解决方法： 请重新执行 SQL。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4762(HY000) : This operation has been finished without checking ls status
+
+* OceanBase 错误码：4762
+* 错误原因：租户配置项 `enable_rebalance` 被关闭，导致日志流不会进行均衡。因此，一些操作需要检查日志流是否均衡，但是跳过了该步骤直接结束操作。
+* 解决方法：无需处理。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4763(HY000) : invalid user.table.column, table.column, or column specification
+
+* OceanBase 错误码：4763
+* 错误原因：SQL 语句中指定的用户、表或列名称不正确或无效。
+* 解决方式：检查 SQL 语句中指定的用户、表或列是否正确，确保没有拼写错误或语法错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4764(HY000) : unknown SET option \'%s\'
+
+* OceanBase 错误码：4764
+* 错误原因：在设置参数时，指定了未知的 SET 选项。
+* 解决方式：检查 SET 命令中指定的选项是否正确，确保没有拼写错误或语法错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4765 (HY000) : create standby tenant may fail, %s
+
+* OceanBase 错误码：4765
+* 错误原因：创建备租户时出现了某种原因可能会导致无法创建成功。
+* 解决方式： 检查 `V$OB_LS_LOG_RESTORE_STATUS` 表中系统日志流的恢复状态 。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4766 (HY000) : ls waiting safe destory, %s
+
+* OceanBase 错误码：4766
+* 错误原因：在等待安全销毁日志流时出现了错误。
+* 解决方式：检查日志流的使用情况和依赖关系，确保日志流不再被使用，并解除相关的依赖关系。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
