--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/900.9000-9499-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/900.9000-9499-of-mysql-mode.md
@@ -138,8 +138,7 @@ ERROR 9018 (HY000) : agent has failed task
 
 * 解决方式：请联系 OceanBase 技术支持人员协助排查。
 
-ERROR 9019 (HY000) : restore partition is compelete
-------------------------------------------------------------------------
+## ERROR 9019 (HY000) : restore partition is complete
 
 * OceanBase错误码：9019
 
@@ -846,6 +845,39 @@ ERROR 9086 (HY000) : backup advance checkpoint by flush timeout
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
+## ERROR 9096 (HY000) : standby binary version is lower than primary data version, standby need upgrade
+
+* OceanBase 错误码：9096
+* 错误原因：备库版本落后于主库版本。  
+* 解决方式：检查备库版本和主库版本，需要等待备库升级完成。  
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 9097 (HY000) : primary tenant has been dropped
+
+* OceanBase 错误码：9097
+* 错误原因：主备同步过程中，主租户被删除。
+* 解决方式：检查主库的租户信息，确认是否存在主租户。  
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 9098 (HY000) : normal object in object_storage(oss,cos,etc.) can't be appended content
+
+* OceanBase 错误码：9098
+* 错误原因：在尝试向对象存储（如 OSS、COS 等）中的普通对象追加内容时出错。
+* 解决方式：检查对象存储类型，确保正在使用的对象存储类型支持向普通对象追加内容。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
 ERROR 9100 (HY000) : no such file or directory
