--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -162,6 +162,18 @@ ORA-00060：deadlock detected while waiting for resource
 
 * 解决方式：重新发起 Stop Server 命令直到成功。
 
+## ORA-00600：unknown SET option \'%s\'
+
+* OceanBase 错误码：4764
+* SQLSTATE：HY000
+* 错误原因：在设置参数时，指定了未知的 SET 选项。
+* 解决方法：检查 SET 命令中指定的选项是否正确，确保没有拼写错误或语法错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ORA-00600：Cannot create a JSON value from a string
 ------------------------------------------------------------------------
 
