--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
@@ -108,8 +108,7 @@ ORA-01012：not logged on
 
 * 错误原因：未登录。
 
-ORA-01017：invalid username/password; logon denied
-----------------------------------------------------------------------
+## ORA-01017：invalid username/password; logon denied
 
 * OceanBase 错误码：5845
 
@@ -480,6 +479,18 @@ ORA-01465：invalid hex number
 * SQLSTATE：HY000
 
 * 错误原因：无效的十六进制数。
+
+## ORA-01466：Unable to read data -* Table definition has changed
+
+* OceanBase 错误码：5386
+* SQLSTATE：HY000
+* 错误原因：表的定义发生过变化，读取的快照点过久导致无法正确读取或解析。  
+* 解决方法：检查表的定义是否发生了变化，确认是否存在列的添加或删除、数据类型或长度的修改等情况。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
 
 ORA-01468：a predicate may reference only one outer-joined table
 ------------------------------------------------------------------------------------
