--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/400.ora-01500-to-ora-01999-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/400.ora-01500-to-ora-01999-of-oracle-mode.md
@@ -263,6 +263,18 @@ ORA-01741：illegal zero-length identifier
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
+## ORA-01747：invalid user.table.column, table.column, or column specification
+
+* OceanBase 错误码：4763
+* SQLSTATE：HY000
+* 错误原因：SQL 语句中指定的用户、表或列名称不正确或无效。
+* 解决方法：检查 SQL 语句中指定的用户、表或列是否正确，确保没有拼写错误或语法错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ORA-01743：only pure functions can be indexed
 -----------------------------------------------------------------
 
