--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md
@@ -59,6 +59,18 @@
 
 * 错误原因：找不到程序单元。
 
+## ORA-06513：PL/SQL: index for PL/SQL table out of range for host language array
+
+* OceanBase 错误码：9750
+* SQLSTATE：HY000
+* 错误原因：在使用 PL/SQL 表时，索引超出了主机语言数组的范围。
+* 解决方法：检查 PL/SQL 表的定义，确保表的定义正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ## ORA-06519：active autonomous transaction detected and rolled back
 
 * OceanBase 错误码：5796
@@ -214,6 +226,18 @@
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
+## ORA-06564：object %.*s does not exist
+
+* OceanBase 错误码：9749
+* SQLSTATE：HY000
+* 错误原因：请求的对象不存在。
+* 解决方法：检查请求的对象名称是否正确或错误，确认是否可以找到该对象。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
 ## ORA-06575：Package or function PRO is in an invalid state
