--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/800.ora-20000-to-ora-29999-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/800.ora-20000-to-ora-29999-of-oracle-mode.md
@@ -214,6 +214,18 @@ ORA-22816：unsupported feature with RETURNING clause
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
+## ORA-22922：LOB value does not exist
+
+* OceanBase 错误码：7419
+* SQLSTATE：HY000
+* 错误原因：在尝试访问 LOB 值时，该值不存在。
+* 解决方法：检查 LOB 值所在的表或索引是否存在或已经被删除，确认是否可以重新恢复该表或索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ORA-22928：invalid privilege on directories
 ---------------------------------------------------------------
 
