--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/700.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -908,11 +908,11 @@ ORA-16000：standby tenant is read only
   <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
-## ORA-19208：parameter 1 of function XMLELEMENT must be aliased
+## ORA-19208：parameter %d of function XMLELEMENT must be aliased
 
 * OceanBase 错误码：7413
 * SQLSTATE：42000
-* 错误原因：XMLELEMENT() 函数的属性参数没有别名。
+* 错误原因：XMLELEMENT() 函数的第 n 个属性参数没有别名。
 * 解决方法：
    1. 检查 XMLELEMENT() 函数属性的语法，确认其是否正确有效。
    2. 确认 XMLELEMENT() 函数的属性参数是否指定别名。
