--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/500.5000-5999-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/500.5000-5999-of-mysql-mode.md
@@ -1326,7 +1326,7 @@ ERROR 5436 (42000) : TIMESTAMP_TO_SCN expected timestamp argument
 ## ERROR 5500 (HY000) : Legitimacy check failed for generated columns.
 
 * OceanBase 错误码：5500
-* 错误原因：在对生成列或函数索引的值做合法性检查时，发现已存储的值与当前环境下根据生成列或索引定义重新计算的值不同，这可能是因为使用了计算结果受到系统变量影响，或本身行为不确定的内置函数来定义生成列或索引所致。
+* 错误原因：在对生成列或函数索引的值做合法性检查时，发现已存储的值与当前环境下根据生成列或索引定义重新计算的值不同，这可能是因为使用了计算结果受到系统变量影响，或本身行为不确定的内置函数来定义生成列或索引所致。如果开启了 `_enable_defensive_check` 配置项，会防御性报错。
 * 解决方式：检查生成列和函数索引的定义，若确定是系统变量改变导致计算结果变化，删除生成列/索引并重建。若是其他情况或问题未解决，请联系技术支持人员协助排查。
 
 <main id="notice" type='explain'>
