--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md
@@ -198,4 +198,4 @@ ANALYZE TABLE table_name UPDATE HISTOGRAM ON column_name_list WITH INTNUM BUCKET
 ## 相关文档
 
 * [PL 语法结构（MySQL 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/200.pl-mysql/100.basic-syntax-mysql.md)
-* [PL 语法结构（Oracle 模式）](../../../../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/1.pl-language-basics-oracle/)
+* [PL 语法结构（Oracle 模式）](../../../../../../../700.reference/400.development-reference/300.pl-reference/300.pl-oracle/100.pl-language-basics-oracle/100.character-set-oracle.md)
