--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/10600.global_write_halt_residual_memory.md
@@ -4,7 +4,7 @@ global_write_halt_residual_memory 用于设置触发暂停普通租户写入（s
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
-<p>从 V4.2.0 版本开始弃用。</p>
+<p>该配置项从 V4.2.0 版本开始弃用。</p>
 </main>
 
 |      **属性**      |  **描述**   |
