--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/16000.plan_cache_high_watermark.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/16000.plan_cache_high_watermark.md
@@ -4,7 +4,7 @@ plan_cache_high_watermark 用于设置执行计划缓存占用内存的阈值，
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
-<p>从 V4.2.0 版本开始弃用。</p>
+<p>该配置项从 V4.2.0 版本开始弃用。</p>
 </main>
 
 |      **属性**      | **描述** |
