--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/20800.system_trace_level.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/20800.system_trace_level.md
@@ -4,7 +4,7 @@ system_trace_level 用于设置系统追踪日志的日志打印级别。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
-<p>从 V4.2.0 版本开始弃用。</p>
+<p>该配置项从 V4.2.0 版本开始弃用。</p>
 </main>
 
 |      **属性**      |                                                                               **描述**                                                                                |
