--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/1500.io_category_config.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/1500.io_category_config.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
-<p>从 V4.0.0 版本开始引入，从 V4.2.0 版本开始弃用。</p>
+<p>该配置项从 V4.0.0 版本开始引入，从 V4.2.0 版本开始弃用。</p>
 </main>
 
 
