--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7000.ls_gc_delay_time.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7000.ls_gc_delay_time.md
@@ -20,9 +20,9 @@
 
   * 如果源端的主租户未开启日志归档，同时配置项 `ls_gc_delay_time` 的默认值为 1h，则日志延迟删除机制生效，且日志流延迟删除的时间为 1 小时。
 
-  * 如果源端的主租户开启了日志归档，由于日志归档保证了日志流数据的完整性，因此日志流的 GC(Garbage Collection) 不会受该配置项的影响。即，该场景下，无论配置项 `ls_gc_delay_time` 的值为多少，日志延迟删除机制都不会生效。
+  * 如果源端的主租户开启了日志归档，由于日志归档保证了日志流数据的完整性，因此日志流的 GC(Garbage Collection) 不会受该配置项的影响。即，该场景下，无论配置项 `ls_gc_delay_time` 的值为多少，日志延迟删除机制均不会生效。
 
-* 对于删除租户的场景，无论配置项 `ls_gc_delay_time` 的值为多少，日志流延迟删除机制不生效。
+* 对于删除租户的场景，无论配置项 `ls_gc_delay_time` 的值为多少，日志流延迟删除机制均不生效。
 
 **示例**
 
