420：demo and deploy update

--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/100.configuring-the-deploy-environment-through-oat/100.add-server.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/100.configuring-the-deploy-environment-through-oat/100.add-server.md
@@ -1,25 +1,15 @@
 # 添加服务器
 
-将服务器添加到 OAT 系统中时，OAT 提供以下服务器初始化配置：
-
-* **OB Server**：适用于专门部署业务使用的 OceanBase 集群和 OBProxy 集群，会执行磁盘相关检查、设置 OBServer 服务器开机自启动脚本用于在系统重启后自动拉起相关进程。
-
-* **OB 产品服务**：适用于专门部署 OMS、OBSharding 等容器化生态产品及其依赖的组件如 InfluxDB 等（MetaDB 除外，对磁盘有要求），会执行 Docker 安装。
-
-* **OB Server + OB 产品服务**： 适用于专门部署 MetaDB 或与其他产品服务共同部署（如 OCP），会执行磁盘检查并安装 docker。由于 MetaDB 使用 Docker daemon 实现开机启动，因此不会设置 OBServer 开机自启动脚本，不适合部署业务 OceanBase 集群。
-
-* 创建 `UID:GID` 是 `500:500` 的 `admin` 组和 `admin` 用户。
-
-* 时钟同步。
+本文主要介绍如何将服务器添加到 OAT 资源池。
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
-   <p>本节以 OAT V4.1.1 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。</p>
+   <p>本节以 OAT V4.1.2 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。</p>
 </main>
 
 ## 前提条件
 
-您的服务器已完成相关配置。详细信息，请参见 [服务器配置](../../200.preparations-before-deploy/200.configure-servers.md)。
+您已安装 OAT。详细信息，请参见 [部署 OAT](../../200.preparations-before-deploy/400.deploy-oat.md)。
 
 ## 操作步骤
 
@@ -31,42 +21,74 @@
 
    ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/3.deploy-oceanbase-database-enterprise/2%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8.png)
 
-3. 在弹出的 **添加服务器** 对话框中，输入服务器信息。
+3. 在 **添加服务器** 页面中，输入基础信息。
 
-   ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/3.deploy-oceanbase-database-enterprise/3%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%BF%A1%E6%81%AF.png)
+   ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/oat-add-server/1%E5%9F%BA%E7%A1%80%E4%BF%A1%E6%81%AF.png)
 
-   服务器相关字段的填写信息为 **基础信息** 和 **初始化配置**，具体信息如下。
-
-   **基础信息：**
+   **具体字段说明如下：**
 
    |   字段    |          描述          |
    |-----------|----------------------|
    | 服务器 IP | 待添加的服务器的外网网卡 IP。    |
    | SSH 端口  | 待添加的服务器的 SSH 访问端口。   |
-   | 机房      | 待添加的服务器所属的机房。        |
+   | 机房（IDC） | 待添加的服务器所属的机房。        |
    | 凭据      | 待添加的服务器的访问凭据。当前支持用户名和密码及密钥两种类型的凭据。|
    | 说明（可选）| 添加服务器的注释，便于更好地管理主机。|
 
-   **初始化配置：**
+4. 在 **添加服务器** 页面中，进行初始化配置。
 
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <p>不执行初始化配置可能导致服务器无法部署各种 OceanBase 相关服务，建议仅在接管组件或接管产品场景关闭初始化配置。</p>
-   </main>
+   ![4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/oat-add-server/2%E5%88%9D%E5%A7%8B%E5%8C%96%E9%85%8D%E7%BD%AE.png)
 
-   |   字段    |          描述         |
-   |-----------|----------------------|
-   | 初始化配置 | 服务器用于接管产品或组件时，无需初始化配置。|
-   | 服务器用途 | 待添加的服务器用途。|
-   | Docker 根目录 | Docker 数据目录。|
-   | admin UID:GID | 操作系统的 `admin` 用户对应的 UID 和 GID。|
-   | 设置 `admin` 密码（可选）| 设置 `admin` 密码，可以使用随机密码。|
-   | 时钟同步 | 是否开启时钟同步。|
+   **具体字段说明如下：**
 
-4. 单击 **确认**。
+   |   字段    |          描述          |
+   |----------|----------------------|
+   | 服务器用途 | 待添加的服务器用途。 |
+   | 操作系统属主用户 | 安装、运行 OB Server 及 OB 产品服务的操作系统用户，可自定义设置。 |  
+   | 用户密码 | 对应上述操作系统属主用户密码。 |  
+   | 用户 UID:GID | 操作系统属主用户对应的 UID 和 GID。 |
+   | docker 根目录 | Docker 数据目录。 |
 
-   服务器添加成功后，您可以在服务器列表中看到新添加的服务器。
+   * 时钟同步（可选）：默认为关闭。开启时钟同步，则需要填写以下信息：
+
+      <main id="notice" type='notice'>
+      <h4>注意</h4>
+      <p>部署 OceanBase 集群的服务器和部署 OCP 的服务器需做时钟源同步。</p>
+      </main>
+
+      |   字段    |          描述          |
+      |----------|----------------------|
+      | 时钟源 IP | 时钟源 IP。|
+      | minpoll： | chrony 客户端向时钟源发起时间同步请求的最小时间间隔，单位为秒。 |
+      | maxpoll： | chrony 客户端向时钟源发起时间同步请求的最大时间间隔，单位为秒。 |  
+      | maxslewrate： | 用于控制 chrony 客户端时钟的最大调整速率，单位为 PPM （百万分之一）。 |  
+      | 同时把此服务器作为次级时钟源（可选） | 设置后当允许来自白名单中的客户端请求，禁止来自黑名单中的客户端请求前服务器可作为时钟源对外提供服务。 |
+
+   * 自动同步给 OCP 管理（可选）：默认为关闭。开启后需选择已安装的 OCP，如无可选 OCP，则默认置灰。在 OAT 中对服务器完成初始化设置后，自动调用 OCP 的 API 把服务器添加到指定的 OCP 中便于后续使用。
+
+      <main id="notice" type='explain'>
+         <h4>说明</h4>
+         <p>此处已安装的 OCP 来自于 <strong>产品服务</strong> > <strong>产品</strong> > <strong>OCP</strong> 中已安装的 OCP。安装 OCP 可参考 <a href="../200.deploy-ocp-use-oat/400.deploy-ocp.md">部署 OCP</a>。</p>
+      </main>
+
+   * 磁盘初始化（可选）：为保障 OceanBase 数据库及相关产品服务的稳定性，通常建议将服务所用的目录配置在独立的磁盘上。选择初始化磁盘后，程序将自动通过 `lvm` 创建对应 `vg`，并将对应大小的 `lv` 挂载到指定的挂载目录上。
+
+      * 选择磁盘或分区：系统会自动识别未挂载的磁盘设备，用户可以选择需要挂载的磁盘设备，支持多选。
+      * 挂载用途：分为 **软件安装路径**、**数据盘路径**、**日志盘路径** 和 **docker 根目录**，用户可根据实际要求选择挂载用途。
+      * 挂载点：用户根据实际情况，填写相应的挂载路径。
+      * 空间（/GB）：根据实际情况填写相应的空间大小，单位为 GB。
+
+5. 单击 **确认**。
+
+   * 如果用户打开了磁盘初始化功能，提交时会出现弹窗展示检查项，当检查项不存在报错后，则可点击 **确定**，添加服务器。
+
+   * 如果用户未打开磁盘初始化功能，则直接提交，并进行初始化操作。
+
+服务器提交成功后，可以在服务器列表中看到新添加的服务器。此时机器状态为 **初始化中**。用户可以在 **服务器管理** 页面，找到添加的服务器，在对应的 **操作** 列中，点击 **查看任务**，查看任务进度。如果服务器太多，可以在页面上方通过 IP 搜索查询。
+
+如果遇到了报错的子任务，且该子任务不影响业务，可以查看日志信息后，手动将子任务设置为成功。
 
 ## 相关文档
 
-[添加服务器](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002026450)
+* 更多添加服务器的信息，请参见 [添加服务器](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002026450)。
+* 在服务器完成初始化之后，可以进行该服务器的运维，运维内容包括修改服务器用途、时钟同步配置、磁盘初始化。运维服务器的详细信息，请参见 [运维服务器](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002438440)。
