--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/200.deploy-ocp-use-oat/400.deploy-ocp.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/300.deploy-through-a-graphical-interface/200.deploy-ocp-use-oat/400.deploy-ocp.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
-   <p>本节以 OAT V4.1.1 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。</p>
+   <p>本节以 OAT V4.1.2 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。</p>
 </main>
 
 ## 前提条件
@@ -85,7 +85,15 @@
 
    * 不使用：选择不使用负载均衡将无法获得高可用能力，默认使用第一台 IP 作为连接信息。
 
-5. OCP 配置完成后，点击 **提交**。
+5. 在 **安装 OCP** 页面，完成 **OpenSearch 配置**。
+
+    OpenSearch 配置的模式分为如下三种：
+
+    * 已创建的 OpenSearch：用户可以在下拉框内选择通过 OAT 创建的 OpenSearch，关于 OpenSearch 的创建可参考 [创建和卸载 OpenSearch](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002438433)。
+    * 外部的 OpenSearch：需要填写外部部署的 OpenSearch 的 URL、用户名、密码。
+    * 不使用。
+  
+6. OCP 配置完成后，点击 **提交**。
 
    如果您的配置有误，点击 **重置** 一键恢复默认配置。
 
