--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/400.deploy-oat.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/400.deploy-oat.md
@@ -236,7 +236,7 @@ OAT 部署成功后，您需要登录 OAT 来确认部署是否成功。
 
 2. 如果在浏览器窗口中看到登录界面，表示已经成功安装并启动 OAT。
 
-   在显示的登录页面，使用 admin 账号登录系统。
+   在显示的登录页面，使用 `admin` 账号登录系统。
 
    <main id="notice" type='notice'>
      <h4>注意</h4>
@@ -247,10 +247,10 @@ OAT 部署成功后，您需要登录 OAT 来确认部署是否成功。
 
 3. 设置密码激活账号。
 
-   使用 admin 账号的默认密码登录，然后设置密码激活账号。
+   使用 `admin` 账号的默认密码登录，然后设置密码激活账号。
 
    ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/3.deploy-oceanbase-database-enterprise/0%E5%AF%86%E7%A0%81%E6%BF%80%E6%B4%BB-%E4%B8%AD%E6%96%87.png)
 
 ## 相关文档
 
-[安装 OAT](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002026444)
+更多安装 OAT 的信息，请参见 [安装 OAT](https://www.oceanbase.com/docs/enterprise-oat-doc-cn-10000000002438431)。
