--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/29300.storage_meta_cache_priority.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/29300.storage_meta_cache_priority.md
@@ -1,6 +1,6 @@
 # storage_meta_cache_priority
 
-`ls_gc_delay_time` 用于控制 kvcache 中存储 Meta Cache 的优先级。
+`storage_meta_cache_priority` 用于控制 kvcache 中存储 Meta Cache 的优先级。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
