--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/1000.9500-9999-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/1000.9500-9999-of-mysql-mode.md
@@ -406,8 +406,8 @@ ERROR 9695 (02000) : Unhandled user-defined not found condition
 ## ERROR 9750 (HY000) : PL/SQL: index for PL/SQL table out of range for host language array
 
 * OceanBase 错误码：9750
-* 错误原因：在使用 PL/SQL 表时，索引超出了主机语言数组的范围。
-* 解决方式：检查 PL/SQL 表的定义，确保表的定义正确。
+* 错误原因：在使用 PL/SQL 表时，索引超出了数组的范围。
+* 解决方式：确保索引的值没有超出数组范围。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
