--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/400.4500-4999-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/400.4500-4999-of-mysql-mode.md
@@ -1233,8 +1233,8 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 ## ERROR 4766 (HY000) : ls waiting safe destory, %s
 
 * OceanBase 错误码：4766
-* 错误原因：在等待安全销毁日志流时出现了错误。
-* 解决方式：检查日志流的使用情况和依赖关系，确保日志流不再被使用，并解除相关的依赖关系。
+* 错误原因：提示日志流正在等待被安全销毁。
+* 解决方式：无需处理。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
