--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/600.ora-05000-to-ora-10000-of-oracle-mode.md
@@ -63,8 +63,8 @@
 
 * OceanBase 错误码：9750
 * SQLSTATE：HY000
-* 错误原因：在使用 PL/SQL 表时，索引超出了主机语言数组的范围。
-* 解决方法：检查 PL/SQL 表的定义，确保表的定义正确。
+* 错误原因：在使用 PL/SQL 表时，索引超出了数组的范围。
+* 解决方法：确保索引的值没有超出数组范围。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
