--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7200.archive_lag_target.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7200.archive_lag_target.md
@@ -16,7 +16,7 @@
 
 配置项使用说明：
 
-* 对于基于网络的物理备库的场景的场景，建议根据租户的写入压力以及对归档时效性的要求，调整配置项 `archive_lag_target` 的值。在时效性满足的前提下，尽量保证单个日志流在一个 `archive_lag_target` 所设置的周期内，产生不少于一个 64 MB 大小的日志文件。
+* 对于基于网络的物理备库的场景，建议根据租户的写入压力以及对归档时效性的要求，调整配置项 `archive_lag_target` 的值。在时效性满足的前提下，尽量保证单个日志流在一个 `archive_lag_target` 所设置的周期内，产生不少于一个 64 MB 大小的日志文件。
 
   <main id="notice" type='explain'>
   <h4>说明</h4>
