--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/29300.storage_meta_cache_priority.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/29300.storage_meta_cache_priority.md
@@ -14,6 +14,8 @@
 | 取值范围 | [1,+∞) |
 | 是否重启 OBServer 节点生效 | 否 |
 
+OceanBase 数据库将 Table Store、SSTable 等元数据统一抽象为存储 Meta，并将其放入 kvcache 内存中统一管理。当出现 Meta Cache 使用不高或频繁未命中的时候，用户可以根据负载的特征，改变其优先级，使得有限 kvcache 内存资源的使用效率更高，更灵活。
+
 在 kvcache 中，Cache 的优先级数值越大，优先级越高，占用的内存越不容易被淘汰。已有的几种 Cache 类型的优先级配置项如下：
 
 * [tablet_ls_cache_priority](23900.tablet_ls_cache_priority.md)，其默认值为 1000，取值范围为 [1,+∞)。
