--- a/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/700.7000-7999-of-mysql-mode.md
+++ b/zh-CN/700.reference/900.error-code/600.error-code-of-mysql-mode/700.7000-7999-of-mysql-mode.md
@@ -362,8 +362,8 @@ ERROR 7041 (HY000) : election priority mechanism changed, maybe during upgrading
 ## ERROR 7120 (HY000) : tablet GC lock conflict
 
 * OceanBase 错误码：7120
-* 错误原因：在执行垃圾回收操作时，发现了锁冲突。
-* 解决方式：检查 tablet GC 操作需要获取的资源是否已被其他进程或线程锁定，如有必要，等待资源的释放或修改操作。
+* 错误原因：Tablet 垃圾回收锁冲突。
+* 解决方式：无需处理。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
