--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -307,7 +307,7 @@
       | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
       | max_syslog_file_count  | 可选      | 0        | 设置在回收日志文件之前可以容纳的日志文件数量。值为 0 时表示不自动清理。 |
       | ocp_meta_tenant  | 可选      | tenant_name: ocp</br>max_cpu: 1</br>memory_size: 2147483648        | 配置 OCP Express 所需的 meta 租户规格，ocp_meta_tenant 下的配置都会作为创建租户时的参数传入。</br>示例中仅列举了几个重要配置，具体可配置参数可参考创建租户命令支持的参数，详情请参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 中 **obd cluster tenant create** 命令介绍。 |
-      | mysql_port  | 必选      | 2881        | 设置 SQL 服务协议端口号，默认为 2881。OBClient 直连该端口可以访问该节点。 |
+      | mysql_port  | 必选      | 2881        | 设置 SQL 服务协议端口号，默认为 2881。 |
       | rpc_port  | 必选      | 2882       | 设置远程访问的协议端口号，是 observer 进程跟其他节点进程之间的 RPC 通信端口，默认为 2882。 |
       | home_path  | 必选      | 无       | OceanBase 数据库默认安装路径，建议在普通用户 admin 下。 |
       | data_dir  | 可选      | $home_path/store       | 设置存储 SSTable 等数据的目录，建议配置为独立的磁盘。 |
