--- a/zh-CN/700.reference/1500.command-line-tools/1300.mysqltest/100.install-of-mysqltest.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1300.mysqltest/100.install-of-mysqltest.md
@@ -1,10 +1,10 @@
 # 使用 obd.sh 执行 mysqltest
 
-通过 obd.sh 执行 mysqltest 测试时需使用通过 obd.sh 部署的 OceanBase 数据库，本文通过示例介绍如何从编译源码开始使用 obd.sh 部署 OceanBase 数据库并执行 mysqltest 测试。
+使用 obd.sh 执行 mysqltest 测试时需使用通过 obd.sh 部署的 OceanBase 数据库，本文结合示例介绍如何从编译源码开始使用 obd.sh 部署 OceanBase 数据库并执行 mysqltest 测试。
 
 ## 背景介绍
 
-为简化开发者的操作步骤，降低开发者的理解成本，我们将 OBD 的一些命令封装到 obd.sh 脚本中，并将该脚本存放在 OceanBase 源码 [oceanbase/tools/deploy](https://github.com/oceanbase/oceanbase/blob/master/tools/deploy/obd.sh) 目录下。
+为简化开发者的操作步骤，降低开发者的理解成本，我们将 OBD 的一些命令封装到 obd.sh 脚本中，并将该脚本存放在 OceanBase 源码 [oceanbase/tools/deploy](https://github.com/oceanbase/oceanbase/blob/master/tools/deploy/obd.sh) 目录下。本文执行 mysqltest 测试调用的是 OBD 中 [obd test mysqltest](https://www.oceanbase.com/docs/community-obd-cn-10000000002048173) 命令。
 
 ## 概念介绍
 
@@ -31,7 +31,7 @@ case 是 mysqltest 的最小执行单元， 一个 case 包含至少一个测试
   ./obd.sh mysqltest -n <name> --suite acs --test-server=server2
   ```
 
-* proxy 模式：通过 ODP 连接进行 mysqltest 测试，如使用配置文件 distributed-with-proxy.yaml 部署集群后执行测试。
+* proxy 模式：通过 ODP 连接集群进行 mysqltest 测试，如使用配置文件 distributed-with-proxy.yaml 部署集群后执行测试。
 
   ```shell
   ./obd.sh mysqltest -n <name> --all
@@ -102,7 +102,7 @@ case 是 mysqltest 的最小执行单元， 一个 case 包含至少一个测试
    | 配置项     | 是否必选   | 说明                                 |
    |------------|-----------|--------------------------------------|
    | servers     | 必选      | 每台机器需要用 `- name: 机器标识名 (换行)ip: 机器 IP` 指定，多个机器就指定多次，机器标识名不能重复。</br>在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。  |
-   | mysql_port | 必选      | 设置 SQL 服务协议端口号，OBClient 直连该端口可以访问该节点。 |
+   | mysql_port | 必选      | 设置 SQL 服务协议端口号。 |
    | rpc_port   | 必选      | 设置远程访问的协议端口号，是 observer 进程跟其他节点进程之间的 RPC 通信端口。 |
    | home_path  | 必选      | 组件的安装路径。   |
    | production_mode | 必选 | 生产模式参数，开启会检查服务器资源是否满足生产环境使用，测试场景建议关闭，否则可能部署失败。 |
@@ -116,7 +116,7 @@ case 是 mysqltest 的最小执行单元， 一个 case 包含至少一个测试
    [admin@obtest deploy]$ ./obd.sh deploy -c distributed-with-proxy.yaml -n test
    ```
 
-   其中，`-c` 用于指定部署所需的配置文件路径，`-n` 用于指定部署集群名称。
+   其中，`-c` 用于指定部署所需的配置文件路径，此处以 distributed-with-proxy.yaml 为例；`-n` 用于指定部署集群名称，此处以 test 为例。
 
 ### 步骤三：执行 mysqltest 测试
 
@@ -145,13 +145,13 @@ case 是 mysqltest 的最小执行单元， 一个 case 包含至少一个测试
 
 ## 附录
 
-执行 mysqltest 测试命令时可根据实际情况配置一些参数，各参数说明见下表：
+执行 mysqltest 测试时可根据实际情况配置一些参数，各参数说明见下表：
 
 | 参数名 | 是否必选 | 数据类型 | 默认值 | 说明 |
 |-------|---------|----------|-------|------|
 | -n | 是  | string | 默认为空 | 执行测试的集群名。 |
 | --component | 否  | string | 默认为空 | 待测试的组件名。候选项为 obproxy、obproxy-ce、oceanbase 和 oceanbase-ce。为空时，按 obproxy、obproxy-ce、oceanbase、oceanbase-ce 的顺序进行检查。检查到组件存在则不再遍历，使用命中的组件进行后续测试。 |
-| --test-server | 否  | string | 默认为指定的组件下服务器中的第一个节点 | 待测试的机器，后跟 yaml 文件中 servers 对应的 name 值，若 servers 后未配置 name 值，则使用 ip 值，必须是指定的组件下的某个节点名。 |
+| --test-server | 否  | string | 默认为指定的组件下服务器中的第一个节点 | 待测试的机器，可设置为 yaml 文件中 servers 对应的 name 值，若 servers 后未配置 name 值，则使用 ip 值，必须是指定的组件下的某个节点名。 |
 | --user | 否  | string | admin | 执行测试的用户名，一般情况下不需要修改。 |
 | --password | 否  | string | admin | 执行测试的用户密码。 |
 | --database | 否  | string | test | 执行测试的数据库。 |
