--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/100.deploy-by-obd.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/100.deploy-by-obd.md
@@ -71,7 +71,7 @@
      <p>在阿里云或其他云环境下，可能出现程序无法获取公网 IP，从而输出内网地址的情况，此 IP 非公网地址，您需要使用正确的地址访问白屏界面。</p>
      </li>
      <li>
-     <p><code>obd web</code> 命令绑定在 0.0.0.0 上，在多网卡部署的情况下，您可通过任一一个可访问的 IP 访问白屏界面。
+     <p><code>obd web</code> 命令绑定在 0.0.0.0 上，在多网卡部署的情况下，您可通过任一一个可访问的 IP 访问白屏界面。</p>
      </li>
      </ul>
    </main>
