--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7000.ls_gc_delay_time.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/7000.ls_gc_delay_time.md
@@ -1,6 +1,8 @@
 # ls_gc_delay_time
 
-`ls_gc_delay_time` 用于配置物理备库场景下，主租户日志流延迟删除的时间。
+`ls_gc_delay_time` 用于配置租户日志流延迟删除的时间。
+
+OceanBase 数据库从 V4.2.0 版本开始基于日志流的分裂、合并功能设计并实现了负载均衡模块，提供了扩容、缩容等能力。当数据库进行缩容操作时，对于满足 GC(Garbage Collection) 条件的日志流就会被迅速删除，同时系统还会清理 Palf 对应的日志存储。同时，OceanBase 数据库从 V4.2.0 版本开始，实现了基于网络的物理备库。在物理备库架构下，当源端主租户或备租户未开启日志归档，且对数据库进行缩容操作后，日志流很快就会被清理，这样极其容易导致备租户因源端日志的回收而使整体的日志同步卡住，故需要通过该配置项配置源端主租户或备租户日志流延迟删除的时间。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
@@ -14,25 +16,31 @@
 | 取值范围 | [0s,+∞) |
 | 是否重启 OBServer 节点生效 | 否 |
 
+
 配置项使用说明：
 
 * 对于物理备库场景：
 
-  * 如果源端的主租户未开启日志归档，同时配置项 `ls_gc_delay_time` 的默认值为 3600s，即 1 小时，则日志延迟删除机制生效，且日志流延迟删除的时间为 1 小时。
+  * 如果源端的主租户或备租户未开启日志归档，同时配置项 `ls_gc_delay_time` 的默认值为 3600s，即 1 小时，则日志延迟删除机制生效，且日志流延迟删除的时间为 1 小时。
 
-  * 如果源端的主租户开启了日志归档，由于日志归档保证了日志流数据的完整性，因此日志流的 GC(Garbage Collection) 不会受该配置项的影响。即，该场景下，无论配置项 `ls_gc_delay_time` 的值为多少，日志延迟删除机制均不会生效。
+  * 如果源端的主租户或备租户开启了日志归档，由于日志归档保证了日志流数据的完整性，因此日志流的 GC 不会受该配置项的影响。即，该场景下，无论配置项 `ls_gc_delay_time` 的值为多少，日志延迟删除机制均不会生效。
 
 * 对于删除租户的场景，无论配置项 `ls_gc_delay_time` 的值为多少，日志流延迟删除机制均不生效。
 
+  <main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>该配置项中的延迟删除仅保留的是日志流实体，日志流本身的日志文件是否可以保留取决于当前租户的磁盘剩余空间，如果磁盘剩余空间不足，仍然会触发日志回收。</p>
+  </main>
+
 **示例**
 
-* 在主租户所在集群的 `sys` 租户下设置主租户日志流的延迟删除时间
+* `sys` 租户下设置指定租户日志流的延迟删除时间
 
   ```sql
   ALTER SYSTEM SET ls_gc_delay_time='7200s' TENANT = 'mysql_tenant';
   ```
 
-* 主租户设置本租户日志流的延迟删除时间
+* 用户租户设置本租户日志流的延迟删除时间
 
   ```sql
   ALTER SYSTEM SET ls_gc_delay_time='7200s';
